fixed spacing issues

--- a/portfolio.css
+++ b/portfolio.css
@@ -47,7 +47,7 @@ body {
   font-weight: 400;
   line-height: 1.4;
   color: white;
-  background-image: url("https://i.ibb.co/zbvfjzL/F-2.png");
+  background-image: url(https://i.ibb.co/zbvfjzL/F-2.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
@@ -179,15 +179,14 @@ img {
 .projects-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-  grid-gap: 4rem;
-  width: 100%;
-  max-width: 1280px;
+  grid-gap: 10rem;
+  width: fit-content;
+  max-width: 1272px;
   margin: 0 auto;
+  grid-template-rows: 100px;
   margin-bottom: 6rem;
-}
-
-.projects-grid {
-  grid-template-columns: 1fr;
+  box-sizing: border-box;
+  justify-content: space-evenly;
 }
 
 .project p:hover {
@@ -207,9 +206,11 @@ img {
 }
 
 .project-image {
-  height: calc(100% - 6.8rem);
-  width: 100%;
-  object-fit: cover;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 300px;
+  height: 300px;
 }
 
 .project-title {
@@ -249,18 +250,18 @@ img {
 /* Contact section */
 
 .contact-section {
-  display: center;
+  display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
   text-align: center;
   width: 100%;
-  height: 150vh;
-  padding: 0 2rem;
+  height: 650px;
+  padding-bottom: 50px;
   background: var(--main-gray);
   font-style: italic;
   font-family: "Comic Neue";
-  margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 .contact-section-header > h2 {
@@ -296,7 +297,7 @@ img {
   color: red;
 }
 
-@media only screen and (max-width: 400px) {
+@media (max-width: 808px) {
   .nav {
     font-style: italic;
     justify-content: center;
@@ -310,8 +311,6 @@ img {
 
   body {
     font-size: 60%;
-    font-family: "Comic Neue";
-    font-style: italic;
     background-position: 50% -200px;
     background-attachment: fixed;
   }
